# SHOGGOTH-AI

./: .editorconfig  .env.example  .gitignore  AGENTS.md  README.md  shoggoth-draft.md
.github/: CODEOWNERS
.github/workflows/: shoggoth-ci.yml  shoggoth-cross-compile.yml
genex-platform/: AGENTS.md  Cargo.toml  Dockerfile.genex  Dockerfile.genex-admin  docker-compose.genex.yml  schema.cql
genex-platform/admin/: index.html
genex-platform/scripts/: install-genex.sh
genex-platform/src/: admin_server.rs  alignment_engine.rs  database_connector.rs  database_reader.rs  fasta_parser.rs  main.rs  marketplace_escrow.rs  smith_waterman.rs
npu-stack/: AGENTS.md  Dockerfile  pyproject.toml
npu-stack/backend/: main.py
npu-stack/backend/routers/: genomic_training.py  orchestrator_bridge.py  shoggoth_fabric.py
npu-stack/infrastructure/: backup_scylla.sh
npu-stack/kernels/: shoggoth_sharder.py
shoggoth-backbone/: .rustfmt.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.node-agent  Dockerfile.orchestrator  LICENSE  Makefile  book.toml  clippy.toml  deny.toml  docker-compose.aio.yml  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.edge.yml  docker-compose.shoggoth.yml  planning.md
shoggoth-backbone/.cargo/: config.toml  metadata.toml
shoggoth-backbone/apps/shoggoth-cli/: Cargo.toml
shoggoth-backbone/apps/shoggoth-cli/examples/: quickstart.rs
shoggoth-backbone/apps/shoggoth-cli/src/: main.rs
shoggoth-backbone/apps/shoggoth-desktop/: index.html  package.json  tsconfig.json  vite.config.ts
shoggoth-backbone/apps/shoggoth-desktop/public/: manifest.json  sw.js
shoggoth-backbone/apps/shoggoth-desktop/src/: App.tsx  LoginScreen.tsx  SuperadminPanel.tsx  web-dashboard.html
shoggoth-backbone/apps/shoggoth-desktop/src-tauri/: Cargo.toml  tauri.conf.json
shoggoth-backbone/apps/shoggoth-desktop/src-tauri/src/: admin_commands.rs  main.rs
shoggoth-backbone/apps/shoggoth-orchestrator/: Cargo.toml
shoggoth-backbone/apps/shoggoth-orchestrator/src/: main.rs
shoggoth-backbone/clients/c/: CMakeLists.txt  shoggoth_sdk.h  shoggoth_sdk.hpp
shoggoth-backbone/clients/c/src/: shoggoth_sdk_impl.c
shoggoth-backbone/clients/csharp/: ShoggothClient.cs
shoggoth-backbone/clients/python/: pyproject.toml  shoggoth_client.py
shoggoth-backbone/clients/swift/: ShoggothClient.swift
shoggoth-backbone/clients/typescript/: .npmrc  package.json  shoggoth-client.ts
shoggoth-backbone/clients/unreal/: Shoggoth.uplugin  ShoggothPlugin.h
shoggoth-backbone/deploy/grafana/: shoggoth-dashboard.json
shoggoth-backbone/deploy/kubeflow/: shoggoth-training-pipeline.yaml
shoggoth-backbone/deploy/kubernetes/: shoggoth-k8s.yml
shoggoth-backbone/deploy/prometheus/: prometheus.yml  shoggoth-alerts.yml
shoggoth-backbone/deploy/systemd/: shoggoth-units.conf
shoggoth-backbone/deploy/terraform/: cloud-init.yml  main.tf
shoggoth-backbone/docs/: SECURITY.md  SUMMARY.md  edge-device-spec.md  migration-guide.md  openapi.yaml  shoggoth-os-kernel.md
shoggoth-backbone/scripts/: install-linux.sh  install-macos.sh  install-windows.ps1  pre-commit.sh  release.sh  setup-shoggoth-ca.sh
shoggoth-backbone/tests/: README.md
shoggoth-backbone/tests/integration/: benchmarks.rs  node_discovery.rs  orchestrator_api.rs  quic_and_crypto.rs  workload_routing.rs
shoggoth-backbone/tests/load/: k6-load-test.js
