[package]
name = "genex-platform"
version = "0.1.0"
edition = "2024"
authors = ["Shoggoth GENEx Contributors"]
license = "UNLICENSED"
repository = "https://github.com/chainchopper/genex-platform"
rust-version = "1.85"
description = "GENEx: Proprietary genomics processing platform. Chromosome FASTA parser, validation escrow marketplace, ScyllaDB shard-per-core loader, and cross-platform WebRTC vector visualizer. Links against Shoggoth Backbone SDK."

[[bin]]
name = "genex"
path = "src/main.rs"

[[bin]]
name = "genex-admin-server"
path = "src/admin_server.rs"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dashmap = "6.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
blake3 = "1.5"
scylla = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rustls = { version = "0.23", features = ["ring"], default-features = false }
webrtc = "0.11"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
