[project]
name = "npu-stack"
version = "0.1.0"
description = "NPU-STACK: Shoggoth machine learning inference & training hub. GGUF edge model quantization, Unsloth fine-tuning loops, NVIDIA NIM microservice integration, and Triton cross-vendor kernel sharding."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.1",
    "pydantic>=2.0",
    "httpx>=0.28",
    "numpy>=2.0",
    "pyarrow>=18.0",
    "torch>=2.5",
    "unsloth>=2025.0",
    "triton>=3.0",
    "gguf>=0.10",
    "safetensors>=0.5",
    "scylla-driver>=3.28",
    "redis>=5.0",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
cuda = ["nvidia-nim-runtime>=0.2"]
rocm = ["torch-rocm>=2.5"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "black>=24.0",
    "ruff>=0.8",
    "mypy>=1.14",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
