[package]
name = "shoggoth-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Clap-driven CLI for Shoggoth Mesh Machine: deployment, topology inspection, node status, benchmark execution, and resource control."

[[bin]]
name = "shoggoth"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json"], default-features = false, features = ["rustls-tls"] }
shoggoth-core = { path = "../../packages/shoggoth-core" }
shoggoth-sdk = { path = "../../packages/shoggoth-sdk" }
shoggoth-agent = { path = "../../packages/shoggoth-agent" }
