[project]
name = "shoggoth-client"
version = "0.1.0"
description = "Async Python client for the Shoggoth Mesh Machine orchestrator API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
]
